--- a/src/css/event.css
+++ b/src/css/event.css
@@ -5,7 +5,6 @@
   position: relative;
   padding: .5em;
   margin: .5em;
-  width: 30em;
   min-height: 1.5em;
   line-height: 1.5em;
 
